# latex-matheq-simplifier

./: .gitignore  LICENSE  README.md  pyproject.toml
src/latex_matheq_simplifier/: __init__.py
